[package]
name = "obsidian-project-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "A CLI tool for managing Obsidian project workflows efficiently"
homepage = "https://github.com/yourusername/obsidian-project-cli"
repository = "https://github.com/yourusername/obsidian-project-cli"
readme = "README.md"
keywords = ["cli", "obsidian", "project-management", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "opj"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
colored = "2.0"
indicatif = "0.17"
dialoguer = "0.11"
walkdir = "2.4"
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
tabled = "0.15"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
